@@ -893,7 +893,10 @@ d-i partman-auto/disk string /dev/discs/disc0/disc</phrase><phrase condition="le
 # Alternatively, you can specify a disk to partition. The device name must
 # be given in traditional non-devfs format.
 # For example, to use the first SCSI/SATA hard disk:
-d-i partman-auto/disk string /dev/sda</phrase>
+d-i partman-auto/disk string /dev/sda
+# Note: If you want to use whatever disk is available, no matter
+# what its device name, comment the line above out. This will only work if
+# the system only has one disk.</phrase>
 # In addition, you'll need to specify the method to use.
 # The presently available methods are: "regular", "lvm" and "crypto"
 d-i partman-auto/method string lvm
