@@ -40,7 +40,11 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
     booting from floppy is no longer supported for sparc.
   * Document new apt-setup/services-select and related hostname preseeds.
 
- -- Frans Pop <fjp@debian.org>  Tue, 14 Aug 2007 08:13:18 +0200
+  [ Joey Hess ]
+  * Document how to preseed partman-auto to use only available disk, no matter
+    what it's name is.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 15 Aug 2007 02:43:09 -0400
 
 installation-guide (20070319) unstable; urgency=low
 
